--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         <activity
             android:name="com.atalay.bluetoothhelper.View.PrinterList.PrinterListActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             />
     </application>
 
